--- a/organization/universalhealth/application/package.json
+++ b/organization/universalhealth/application/package.json
@@ -10,9 +10,10 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "fabric-network": "^2.2.4",
     "fabric-ca-client": "^2.2.4",
-    "js-yaml": "^3.12.0"
+    "fabric-network": "^2.2.4",
+    "js-yaml": "^3.12.0",
+    "moment": "^2.29.1"
   },
   "devDependencies": {
     "eslint": "^5.6.0"
